Bug 1848407 - Ensure that zero-height block frame lines will be placed on the next page when break-after: page is set. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D186061